Added lightweight REST endpoints. Used by stop command.